# bsubpc

./: README.md  atom_table.py  atoms2table.py  bowl_depths.R  bowl_pca_scores.R  bsubpc_match.py  canonicalize.py  check_extxyz_sanity.py  cif_tblite_forces_to_extxyz.py  compare_stda.R  configuration.nix  correct_structures.py  csd_matches.csv  diagrams.py  download_pipeline.sh  extract_csd_diagram_and_molecule_tables.py  force_histograms.R  force_pipeline.sh  gap_database.R  gap_grid.py  gap_grid.sh  label_atoms.py  make_slides.sh  match.py  plot_bowl_depth_histograms.R  process_search_results.py  pyproject.toml  render_mol.py  run-stda.sh  search.py  setup_uv_env.sh  slides.py  stda_pipeline.sh  subpc_search.py  summarize_stda.py  table1.csv  verify_atom_mapping.py  vis_3d.sh
