[project]
name = "bsubpc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "ase>=3.27.0",
    "fairchem-core>=2.16.0",
    "geomscreen",
    "rdkit>=2025.9.4",
    "ray>=2.54",
    "setuptools<82",
    "pandas>=3.0.1",
]
[tool.uv.sources]
geomscreen = { path = "/scratch/alexlm/geomscreen", editable = true }
