[project]
name = "bsubpc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ase>=3.27.0",
    "numpy>=2.3.5",
    "pandas>=3.0.1",
    "rdkit>=2025.9.4",
    "scipy>=1.17.1",
    "tblite>=0.5.0",
]

[tool.uv]
# The tblite manylinux wheel has unresolved runtime-library symbols on this
# NixOS VM. Build only tblite from source; keep wheels for the rest.
no-binary-package = ["tblite"]

[tool.uv.extra-build-variables]
# The source build emits glibc vector-math calls but does not add libmvec to
# the extension's NEEDED entries unless it is linked explicitly.
tblite = { LDFLAGS = "-lmvec" }
